[project]
name = "http-mock-server"
version = "1.0.0"
description = "A GUI tool for mocking HTTP APIs"
requires-python = ">=3.7"
dependencies = [
    "Flask>=2.0.0",
    "Werkzeug>=2.0.0",
    "jsonschema>=3.2.0",
]

[build-system]
requires = ["pyinstaller>=5.0.0"]
build-backend = "setuptools.build_meta" 